fixed heroku bug

--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "api for smart brain app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "author": "iuliab",
   "license": "ISC",
